# slint_systry_app

./: Cargo.toml  build.rs  readme.md
src/: main.rs
ui/: main.slint
