[package]
name = "slint-systray"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.3.0", default-features = false, features = [
  "accessibility",
  "backend-winit",
  "compat-1-0",
  "renderer-winit-femtovg",
  "std",
]}
i-slint-backend-selector = "=1.3.0"
i-slint-backend-winit = "=1.3.0"
tray-icon = "0.11.0"
tokio = { version = "1.34.0", features = ["sync", "rt", "rt-multi-thread"] }
image = "0.24.7"

[build-dependencies]
slint-build = "1.3.0"
